- BufferTest now tests DynamicBuffer and FixedBuffer